--- a/webapp/src/locales/pt-BR.json
+++ b/webapp/src/locales/pt-BR.json
@@ -2,7 +2,9 @@
     "navbar": {
         "projects": "Projetos",
         "aboutme": "Sobre mim",
-        "contact": "Contato"
+        "contact": "Contato",
+        "home": "Início",
+        "lang": "Linguagem"
     },
     "initScreen": {
         "title": "Desenvolvedor, criador e apaixonado pela inovação"
