--- a/webapp/src/locales/en-US.json
+++ b/webapp/src/locales/en-US.json
@@ -8,5 +8,12 @@
     },
     "initScreen": {
         "title": "Developer, creator and passionate about innovation"
+    },
+    "knowledge": {
+        "frontend": "Front-end Developer",
+        "backend": "Back-end Developer",
+        "acquirements": "Knowledges",
+        "database": "Database",
+        "others": "Frameworks and Libs"
     }
 }
