--- a/webapp/src/locales/en-US.json
+++ b/webapp/src/locales/en-US.json
@@ -25,6 +25,7 @@
         "description_ph3": "I have personal projects that aim to apply my knowledges, creating innovative applications and templates that can contribute to people and to my personal and professional growth ;)",
         "description_ph4": "I'm a big tech enthusiast and seek through it to connect and promote the association of environmental and social issues.",
         "description_ph5": "Formed by the Technical College of Campinas - COTUCA in Data Processing in 2016.",
+        "description_ph6": "I am currently undertaking a degree in Technology in Analysis and Systems Development - UNICAMP",
         "phrase": "Do not quench your inspiration and your imagination; do not become the slave of your model"
     },
     "contact": {
