--- a/webapp/src/locales/pt-BR.json
+++ b/webapp/src/locales/pt-BR.json
@@ -25,6 +25,7 @@
         "description_ph3": "Tenho projetos pessoais que viso aplicar meus conhecimentos, criando aplicações e templates inovadores que possam contribuir para as pessoas e para meu crescimento pessoal e profissional ;)",
         "description_ph4": "Sou um grande entusiasta da tecnologia e busco através dela conectar e promover a associação de questões sociais e ambientais.",
         "description_ph5": "Formado pelo Colégio Técnico de Campinas - COTUCA em Processamento de Dados em 2016.",
+        "description_ph6": "Realizando graduação em Tecnologia em Análise e Desenvolvimento de Sistemas - UNICAMP",
         "phrase": "Não extingua sua inspiração e sua imaginação; não se torne o escravo do seu modelo."
     },
     "contact": {
